@@ -34,7 +34,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -222,6 +222,13 @@
               <widget class="QPushButton" name="UpdateButton">
                <property name="text">
                 <string>&amp;Update</string>
+               </property>
+              </widget>
+             </item>
+            <item>
+              <widget class="QPushButton" name="openMNConfigfileButton">
+               <property name="text">
+                <string>&amp;Masternode.conf</string>
                </property>
               </widget>
              </item>
